Our updated vibe Hackathon Challenge

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#demo" class="btn">Try the Demo</a>
     </div>
     <div class="hero-img">
-      <img src="images/hero.png" alt="Students studying with AI" />
+      <img src="student.png" alt="Students studying with AI" />
     </div>
   </header>
 
